# sdfcollision

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: distance.h  frank_wolfe.h  grad.h  iqblob.h  normalize_mesh.h  normalized_cloth.h  normalized_grid.h
src/: grad.cpp  normalize_mesh.cpp  normalized_cloth.cpp  normalized_grid.cpp
